--- a/client/balldemo.html
+++ b/client/balldemo.html
@@ -271,11 +271,12 @@
 
     function mainLoop(t){
         // TODO: new client/api call loop: ///////////////
-        // -update client side drive scores based on client state
-        // -/nearestPatternRecognizer -> returns pattern recognizer string representing current state
-        // -/updateSlidingWindow -> updates sliding window (with current nearest neighbor pattern state)
-        // -/updateNextMoveScore (with slidingWindow.getAverageDriveScoreForHeadState and slidingWindow.getHead) -> 
-        // -/bestNextAction suggestion (using nearest patternRecognizer)
+        // -update client side drive scores based on client state;
+        //  calculate average of all drive scores
+        // -/nearestPatternRecognizer -> returns pattern recognizer string representing nearest neighbor pattern
+        // -/addTimeStep -> adds timeStep to sliding window (with current nearest neighbor pattern state)
+        // -/updateScore (requires no params, uses slidingWindow) -> 
+        // -/bestNextAction suggestion (using nearest patternRecognizer from /nearestPatternRecognizer)
         // -act on best next action suggestion
         // …and loop!
         // ////////////////////////////////////////
