implement api integration test suite

--- a/client/balldemo.html
+++ b/client/balldemo.html
@@ -271,7 +271,7 @@
 
     function mainLoop(t){
         // TODO: new client/api call loop: ///////////////
-        // -update client side drive scores based on client state;
+        // -update client side drive scores based on current client state;
         //  calculate average of all drive scores
         // -/nearestPatternRecognizer -> returns pattern recognizer string representing nearest neighbor pattern
         // -/addTimeStep -> adds timeStep to sliding window (with current nearest neighbor pattern state)
