--- a/client/v2-split-demo.html
+++ b/client/v2-split-demo.html
@@ -248,7 +248,7 @@ function checkNumber (suggestedAction) {
     currentIhtaiNumber++;
   }
 
-
+  // the suggestedAction value leads to inputState and driveScore
   var ihtaiState = {
       inputState: [currentIhtaiNumber],
       actionState: [suggestedAction],
@@ -258,7 +258,7 @@ function checkNumber (suggestedAction) {
   console.log('current Ihtai Number after action (inputState: ' + currentIhtaiNumber);
   console.log('drive score after action: ');
   console.log(getDriveScore(secretNumber, currentIhtaiNumber));
-  if (counter < 500) {
+  if (counter < 300) {
     counter++;
     return getNearestPatternRecognizer(ihtaiState);
   }
