--- a/client/balldemo_multistep.html
+++ b/client/balldemo_multistep.html
@@ -15,8 +15,8 @@
         }
 
         #renderCanvas {
-            width: 100%;
-            height: 100%;
+            width: 640px;
+            height: 480px;
             touch-action: none;
         }
 
